--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Create Nodejs Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/aswin2023/create-server-nodejs-express/issues"
   },
-  "homepage": "https://github.com/aswin2023/create-server-nodejs-express#readme"
+  "homepage": "https://github.com/aswin2023/create-server-nodejs-express#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
